src/assets/css/norm.scss
// color vars


@import '@/assets/css/vars.scss';

*, *::before, *::after {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html, body {
	width: 100%;
	height: 100%;
}

body {
	background-color: #fff;
	font-family: 'Poppins', 'Manrope', sans-serif;
	color: $dark-blue;
	font-size: 1rem;
	line-height: 1.5rem;
}

.container {
	width: 90%;
	max-width: 1280px;
	margin: 0 auto;
}

a, button {
	transition: all .2s ease;
}

a {
	text-decoration: none;
	color: inherit;
}

ol, ul {
	list-style: none;
}

p {
	opacity: 0.7;
	line-height: 28px;
}


// general custom styles

h1 {
	font-weight: 600;
	font-size: 54px;
	line-height: 74px;
}

h2 {
	font-weight: 600;
	font-size: 48px;
	line-height: 64px;
}

h3 {
	font-weight: 600;
	font-size: 38px;
	line-height: 56px;
}

h4 {
	font-weight: 500;
	font-size: 36px;
	line-height: 56px;
}

h5 {
	font-weight: 500;
	font-size: 32px;
	line-height: 48px;
}

h6 {
	font-weight: 500;
	font-size: 24px;
	line-height: 36px;
}

// buttons

.arrow_btn {
	display: block;
	position: relative;
	font-weight: 500;
	line-height: 28px;
	color: white;
	&::before {
		content: '';
		position: absolute;
		top: 13px;
		right: -41px;
		width: 24px;
		border-top: 2px solid #F4F6FC;
		transition: all .2s ease;
	}
	&:after {
		content: '';
		height: 7px;
		width: 7px;
		transform: rotate(-135deg);
		position: absolute;
		top: 11px;
		right: -41px;
		border-bottom: 2px solid #F4F6FC;
		border-left: 2px solid #F4F6FC;
		transition: all .2s ease;
	}
	&:hover {
		color: $yellow;
	}
	&:hover::before,
	&:hover::after {
		border-color: $yellow;
		transform: translateX(30px);
	}
	&:hover::after {
		transform: translateX(30px) rotate(-135deg);
	}
}

@media screen and (max-width: 600px) {
	h1 {
		font-size: 44px;
		line-height: 64px;
	}
	h2 {
		font-size: 36px;
    	line-height: 50px;
	}
	h3 {
		font-size: 30px;
		line-height: 36px;
	}
}

